docs/manifests/prom-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    #nginx.ingress.kubernetes.io/configuration-snippet: |
    #    rewrite "(?i)/(.)" /prom/$1 break;
    #    rewrite "(?i)/static/(.)" /prom/static/$1 break;
  name: prom-ingress
  namespace: prometheus
spec:
  rules:
  - host: ""
    http:
      paths:
      - backend:
          serviceName: prometheus
          servicePort: 9090
        path: /prom(/|$)(.*)
